refined helm chart, fixed ingress connection and configmaps

--- a/charts/demo-app/Chart.yaml
+++ b/charts/demo-app/Chart.yaml
@@ -1,6 +1,7 @@
+# project-c/charts/demo-app/Chart.yaml
 apiVersion: v2
 name: demo-app
 description: A simple Flask app deployed on k3s via Helm
-version: 0.1.0        # bump later as you release upgrades
-appVersion: "v1"      # your Docker image tag
+version: 0.1.0        # bump later as I release upgrades
+appVersion: "v1"      # my Docker image tag
 
