--- a/charts/demo-app/templates/serviceaccount.yaml
+++ b/charts/demo-app/templates/serviceaccount.yaml
@@ -1,8 +1,10 @@
+# project-c/charts/demo-app/templates/serviceaccount.yaml
 {{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "demo-app.serviceAccountName" . }}
+  namespace: project-c
   labels:
     {{- include "demo-app.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
