--- a/charts/demo-app/templates/ingress.yaml
+++ b/charts/demo-app/templates/ingress.yaml
@@ -1,7 +1,9 @@
+# project-c/charts/demo-app/templates/ingress.yaml
 {{- if .Values.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  namespace: project-c
   name: {{ include "demo-app.fullname" . }}
   labels:
     app: {{ include "demo-app.name" . }}
