--- a/charts/demo-app/templates/configmap.yaml
+++ b/charts/demo-app/templates/configmap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: project-c
+  namespace: monitoring
   name: {{ include "demo-app.fullname" . }}-config
   labels:
     grafana_dashboard: "1"
