--- a/charts/demo-app/templates/dashboard-provisioning-config.yaml
+++ b/charts/demo-app/templates/dashboard-provisioning-config.yaml
@@ -3,14 +3,13 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: demo-app-grafana-dash-config
-  namespace: project-c
+  namespace: monitoring
 data:
   dashboards.yaml: |
     apiVersion: 1
     providers:
       - name: 'default'
         orgId: 1
-        folder: 'Project C Dashboards'
         type: file
         options:
           path: /opt/bitnami/grafana/provisioning/dashboards/custom
