--- a/charts/demo-app/templates/demo-app-rules.yaml
+++ b/charts/demo-app/templates/demo-app-rules.yaml
@@ -4,7 +4,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
   name: {{ include "demo-app.fullname" . }}-rules
-  namespace: {{ .Release.Namespace }}
+  namespace: monitoring
   labels:
     release: prometheus
 spec:
@@ -12,21 +12,22 @@ spec:
     - name: {{ include "demo-app.name" . }}.rules
       rules:
         - alert: DemoAppNoRequests
-          expr: rate(http_request_total{job="{{ include "demo-app.name" . }}"}[1m]) == 0
+          expr: rate(http_requests_total{namespace="{{ .Release.Namespace }}"}[1m]) == 0
           for: 1m
           labels:
             severity: warning
           annotations:
-            summary: "No HTTP requests to {{ include "demo-app.name" . }}"
-            description: "{{ include "demo-app.name" . }} has received no requests in the last 1 minute."
+            summary: "No HTTP requests to demo-app"
+            description: "demo-app has received no requests in the last 1 minute."
+
 
         - alert: HighCPUUsage
-          expr: rate(container_cpu_usage_seconds_total{namespace="{{ .Release.Namespace }}", pod=~"{{ include "demo-app.fullname" . }}.*"}[1m]) > 0.05
+          expr: rate(container_cpu_usage_seconds_total{namespace="{{ .Release.Namespace }}", pod=~"{{ include "demo-app.fullname" . }}.*"}[1m]) > 0.001
           for: 1m
           labels:
             severity: warning
           annotations:
             summary: "High CPU usage detected in {{ include "demo-app.name" . }}"
-            description: "CPU usage for {{ include "demo-app.name" . }} pods has exceeded 5% for 1 minute."
+            description: "CPU usage for {{ include "demo-app.name" . }} pods has exceeded 0.1% for 1 minute."
 {{- end }}
 
